--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ header {
 }
 
 .caja {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     height: 300px;
     flex: 1;
 }
 
 article {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     display: flex;
 }
 
@@ -96,7 +96,7 @@ article {
 }
 
 .lista, .parrafitos {
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -110,7 +110,7 @@ article {
 }
 .side {
     flex: 1 1 ;
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     background-color: beige;
     display: flex;
     flex-direction: column;
@@ -164,7 +164,7 @@ footer p {
     }
 
     .parrafitos-article {
-        border: 2px solid red;
+        /* border: 2px solid red; */
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -173,7 +173,8 @@ footer p {
     .parrafitos-lista-container {
         flex:1 ;
         height: auto;
-    
+        flex-direction: column;
+
     }
 }
 
